Fix tests with Kratos dependency

--- a/queso/python/CMakeLists.txt
+++ b/queso/python/CMakeLists.txt
@@ -29,6 +29,7 @@ set_target_properties(_QuESoPythonModule PROPERTIES
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/QuESoPythonModule.py ${CMAKE_BINARY_DIR}/QuESoPythonModule/__init__.py COPYONLY)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/PyQuESo.py DESTINATION ${CMAKE_BINARY_DIR}/QuESoPythonModule)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/scripts DESTINATION ${CMAKE_BINARY_DIR}/QuESoPythonModule)
+file(COPY ${CMAKE_SOURCE_DIR}/kratos_interface DESTINATION ${CMAKE_BINARY_DIR}/QuESoPythonModule)
 
 if(UNIX)
 	# Set RPATH.
@@ -57,4 +58,5 @@ install(TARGETS _QuESoPythonModule DESTINATION ${CMAKE_INSTALL_PREFIX}/QuESoPyth
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/QuESoPythonModule.py DESTINATION ${CMAKE_INSTALL_PREFIX}/QuESoPythonModule RENAME __init__.py)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/PyQuESo.py DESTINATION ${CMAKE_INSTALL_PREFIX}/QuESoPythonModule)
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/scripts DESTINATION ${CMAKE_INSTALL_PREFIX}/QuESoPythonModule)
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/kratos_interface DESTINATION ${CMAKE_INSTALL_PREFIX}/QuESoPythonModule)
 
